# HoldemCore

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  README_fr.md  run_clang_tidy_on_dir.py
src/: CMakeLists.txt  add_namespaces.py  configfile.cpp  configfile.h  game_defs.h  gamedata.h  loghelper.h  loghelper_client.cpp  main.cpp  session.cpp  session.h  tree.txt
src/adapters/infrastructure/: CMakeLists.txt
src/app/: AppFactory.cpp  AppFactory.h  CMakeLists.txt  DependenciesFactory.cpp  DependenciesFactory.h  main.cpp  main_desktop_app_qt.cpp  main_qt_qml.cpp  main_qt_widgets.cpp  session.cpp  session.h
src/app/qtqml/: AppFactory.cpp  AppFactory.h  main.cpp
src/app/qtwidgets/: AppFactory.cpp  AppFactory.h  main.cpp
src/app/tools/: CMakeLists.txt  bot_statistics_generator.cpp
src/core/: CMakeLists.txt
src/core/cards/: CMakeLists.txt  Card.cpp  Card.h  CardRangeAnalyzer.cpp
src/core/engine/: ActionValidator.h  BettingActions.cpp  BettingActions.h  BettingRound.cpp  BettingRound.h  BettingRoundActions.cpp  BettingRoundActions.h  BettingRoundFlop.cpp  BettingRoundFlop.h  BettingRoundInterface.h  BettingRoundPostRiver.cpp  BettingRoundPostRiver.h  BettingRoundPreflop.cpp  BettingRoundPreflop.h  BettingRoundRiver.cpp  BettingRoundRiver.h  BettingRoundTurn.cpp  BettingRoundTurn.h  BettingState.cpp  BettingState.h  Board.cpp  Board.h  BoardFsm.cpp  BoardFsm.h  BoardInterface.h  ButtonState.h  CMakeLists.txt  CardUtilities.cpp  CardUtilities.h  CardsValue.cpp  CardsValue.h  DeckManager.cpp  DeckManager.h  EngineDefs.h  EngineFactory.cpp  EngineFactory.h  EngineServices.h  Exception.cpp  Exception.h  FlowMode.h  (+35 more)
src/core/interfaces/: HandEvaluationEngine.h  HasHandEvaluationEngine.h  HasLogger.h  HasPlayersStatisticsStore.h  HasRandomizer.h  IBettingRound.h  IBettingRoundState.h  IBettingRoundStateFsm.h  IBoard.h  IBotStrategy.h  IHand.h  IHandEvaluationEngine.h  ILogger.h  IRandomizer.h  ISPObjectFactory.cpp  ISPObjectFactory.h  Logger.h  NullHandEvaluationEngine.h  NullLogger.h  Randomizer.h  ServiceAdapter.h
src/core/player/: BotPlayer.cpp  BotPlayer.h  BotPlayerFsm.cpp  BotPlayerFsm.h  CMakeLists.txt  CurrentHandActions.cpp  CurrentHandActions.h  DefaultPlayerFactory.cpp  DefaultPlayerFactory.h  HandPlausibilityChecker.cpp  HandPlausibilityChecker.h  Helpers.cpp  Helpers.h  HumanPlayer.cpp  HumanPlayer.h  IPlayerFactory.h  LooseAggressiveBotStrategy.cpp  LooseAggressiveBotStrategy.h  LooseAggressivePlayer.cpp  LooseAggressivePlayer.h  ManiacBotStrategy.cpp  ManiacBotStrategy.h  ManiacPlayer.cpp  ManiacPlayer.h  MixedPlayerFactory.cpp  MixedPlayerFactory.h  OpponentsStrengthsEvaluator.cpp  OpponentsStrengthsEvaluator.h  PLayerFsm.cpp  Player.cpp  Player.h  PlayerFactory.cpp  PlayerFactory.h  PlayerFsm.h  PlayerListUtils.cpp  PlayerListUtils.h  PlayerStatistics.cpp  PlayerStatistics.h  PlayerStatisticsUpdater.cpp  PlayerStatisticsUpdater.h  (+21 more)
src/core/ports/: HandEvaluationEngine.h  Logger.h  PlayersStatisticsStore.h
src/core/probability/: DrawProbabilityCalculator.cpp
src/core/services/: BotServices.cpp  BotServices.h  CMakeLists.txt  DefaultRandomizer.cpp  DefaultRandomizer.h  GlobalServices.cpp  GlobalServices.h  PokerServices.cpp  PokerServices.h  ServiceContainer.cpp  ServiceContainer.h
src/core/session/: CMakeLists.txt  Session.cpp  Session.h  SessionFsm.cpp  SessionFsm.h
src/core/ui/: UserInputHandler.h
src/engine/: BettingRound.cpp  BettingRound.h  BettingRoundFlop.cpp  BettingRoundFlop.h  BettingRoundInterface.cpp  BettingRoundInterface.h  BettingRoundPostRiver.cpp  BettingRoundPostRiver.h  BettingRoundPreflop.cpp  BettingRoundPreflop.h  BettingRoundRiver.cpp  BettingRoundRiver.h  BettingRoundTurn.cpp  BettingRoundTurn.h  Board.cpp  Board.h  BoardInterface.cpp  CMakeLists.txt  EngineFactory.cpp  EngineFactory.h  Exception.cpp  Exception.h  Hand.cpp  Hand.h  HumanPlayer.cpp  HumanPlayer.h  LooseAggressivePlayer.cpp  LooseAggressivePlayer.h  ManiacPlayer.cpp  ManiacPlayer.h  PlayerStatistics.cpp  PlayerStatistics.h  TightAgressivePlayer.cpp  TightAgressivePlayer.h  UltraTightPlayer.cpp  UltraTightPlayer.h  boardinterface.h  cardsvalue.cpp  cardsvalue.h  engine.h  (+11 more)
src/infra/: AppDirectories.h  CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  LogHelperClient.cpp  NullLogger.h  Randomizer.cpp  Randomizer.h
src/infra/eval/: PsimHandEvaluationEngine.cpp  PsimHandEvaluationEngine.h
src/infra/persistence/: NullPlayersStatisticsStore.h  SqliteDb.cpp  SqliteDb.h  SqliteLogStore.cpp  SqliteLogStore.h  SqlitePlayersStatisticsStore.cpp  SqlitePlayersStatisticsStore.h  SqliteStatement.h
src/qt/: CMakeLists.txt  aboutpokertraining.ui  gametable.ui  guiinterface.cpp  guiinterface.h  guiwrapper.cpp  guiwrapper.h  newgamedialog.ui  playersrankingdialog.ui  qttoolsinterface.h  startwindow.ui
src/qt/aboutpokertraining/: AboutPokerTrainingImpl.cpp  AboutPokerTrainingImpl.h
src/qt/changecompleteblindsdialog/: changecompleteblindsdialogimpl.cpp  (+1 more)
src/ui/: CMakeLists.txt  gametable.ui  guiinterface.h  guiwrapper.cpp  guiwrapper.h
tests/: CMakeLists.txt  test_common.h
tests/cards_value/: CardsValueTest.cpp
tests/common/: DeterministicStrategy.h  DummyPlayer.h  EngineTest.cpp  EngineTest.h  FakeRandomizer.h  common.h
tests/e2e/: BettingRoundsFsmTest.cpp  BettingRoundsFsmTest.h  BettingRoundsLegacyTest.cpp  BettingRoundsLegacyTest.h  BettingRoundsTest.cpp  BettingRoundsTest.h  EventDrivenArchitectureTest.cpp  EventDrivenArchitectureTest.h  RangeEstimationE2ETest.cpp  SessionE2ETest.cpp  StrategiesE2ETest.cpp
tests/engine/: BettingRoundsFsmTest.cpp  BettingRoundsFsmTest.h  BettingRoundsLegacyTest.cpp  BettingRoundsLegacyTest.h  BoardTest.cpp  CardsTest.cpp  CardsTest.h  EngineTest.cpp  EngineTest.h  FakeRandomizer.h  PotTest.cpp  PreflopStateTest.cpp
tests/hand/: HandTest.cpp  HandTest.h
tests/helpers/: DummyPlayer.h
tests/range/: CardsInRangeTest.cpp  RangeManagerTest.cpp  RangeParserTest.cpp  RangeRefinerTest.cpp
tests/strategy/: StrategyTest.h  test_tight_aggressive.cpp
(+482 files in other folders)
